<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/showSelectName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/show_details_not_found"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/showSelectLabelName" />

        <TextView
            android:id="@+id/showSelectBarcode"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/show_details_not_found"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/showSelectName" />

        <TextView
            android:id="@+id/showSelectDescription"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/show_details_not_found"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/showSelectBarcode" />

        <TextView
            android:id="@+id/showSelectLabelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/show_label_name"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/showSelectLabelBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_label_barcode"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/showSelectBarcode"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft" />

        <TextView
            android:id="@+id/showSelectLabelDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_label_description"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/showSelectDescription"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="280dp" />

        <Button
            android:id="@+id/showSelectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/show_select_button"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/showSelectDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>